--- a/flower-online/main/resources/application.yml
+++ b/flower-online/main/resources/application.yml
@@ -1,11 +1,11 @@
 web:
-  upload-path: E:\flower\user\
+  upload-path: D:\flower\user\
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/chunzhiyu?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/flower_db?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: yumaoying
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     database: mysql
@@ -37,8 +37,8 @@ spring:
   mail:
     port: 597
     host: smtp.qq.com
-    username: 1101271954@qq.com
-    password: hkvzvkqwvdcwbaac
+    username: 330021915@qq.com
+    password: dtciggvlmcgebjed
     default-encoding: utf-8
     properties:
             mail:
